--- a/dashboard.html
+++ b/dashboard.html
@@ -8,136 +8,109 @@
   <meta name="description" content="SAAD $SQ8 Dashboard — view your purchased, claimed, and claimable tokens.">
   <link rel="icon" type="image/png" href="assets/favicon-32x32.png" sizes="32x32">
 
-  <!-- Ethers v6 (browser) -->
-  <script src="https://cdn.jsdelivr.net/npm/ethers@6.13.2/dist/ethers.min.js"></script>
+  <!-- Ethers v6 UMD build ensures a global `window.ethers` -->
+  <script src="https://cdn.jsdelivr.net/npm/ethers@6.13.2/dist/ethers.umd.min.js" defer></script>
 
   <style>
     :root{
-      --muted:#c9d3de;
+      --bg: #0b0e12;
+      --card: #121720;
+      --muted:#93a2b1;
       --primary:#22d3ee;
+      --accent:#8b5cf6;
+      --good:#10b981;
+      --warn:#f59e0b;
       --bad:#ef4444;
-      --panel-bg: rgba(0,0,0,0.45);      /* <- SAME transparency as your dApp */
-      --panel-br: rgba(255,255,255,.12);
-      --tile-bg: rgba(255,255,255,.05);
-      --tile-br: rgba(255,255,255,.10);
+      --ring: rgba(34,211,238,.25);
     }
     *{box-sizing:border-box}
     html,body{height:100%}
     body{
-      margin:0;
-      font-family: ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Arial, "Apple Color Emoji","Segoe UI Emoji";
-      color:#f2f6fb;
-      background: transparent; /* background image applied by JS */
+      margin:0; font-family: ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Arial, "Apple Color Emoji","Segoe UI Emoji";
+      color:#e5edf5;
+      /* default background if no ?file is provided */
+      background:
+        radial-gradient(1200px 600px at 10% -20%, #14202e 0%, transparent 60%),
+        radial-gradient(1200px 600px at 110% 120%, #211937 0%, transparent 60%),
+        var(--bg);
+      background-attachment: fixed, fixed, fixed;
+      background-repeat: no-repeat;
+      background-position: center, center, center;
+      background-size: cover, cover, auto;
     }
-
-    /* Smaller by default so background art shows */
-    .wrap{
-      max-width: 520px;
-      margin: 0 auto;
-      padding: 16px 10px 28px;
-      background: transparent;
-    }
-    /* Extra-compact via ?compact=1 */
-    .wrap.compact{
-      max-width: 420px;
-      padding: 12px 8px 22px;
-    }
-
+    .wrap{max-width:1040px; margin:0 auto; padding:28px 16px 64px}
     header{
-      display:flex; align-items:center; justify-content:space-between; gap:10px; margin-bottom:10px;
+      display:flex; align-items:center; justify-content:space-between; gap:16px; margin-bottom:18px;
     }
-    .brand{display:flex; align-items:center; gap:10px; font-weight:800}
-    .brand img{width:32px; height:32px; display:block}
-    .brand h1{
-      font-size:18px; margin:0;
-      color:#ff1a1a; /* Title in red */
-      text-shadow: 0 2px 10px rgba(0,0,0,.35);
-      letter-spacing:.2px;
+    .brand{
+      display:flex; align-items:center; gap:12px; font-weight:800; letter-spacing:.3px;
     }
-    .brand .sub{
-      margin-top:2px;
-      font-size:12px;
-      color:#ff1a1a; /* Subtitle in red as requested */
-      font-weight:700;
-    }
+    .brand img{width:40px; height:40px; display:block}
+    .brand h1{font-size:20px; margin:0; color:#ff3434;} /* red title */
     .net-pill{
-      font-size:11px; color:#111; background:#a7f3d0; border-radius:999px; padding:3px 8px; font-weight:800
+      font-size:12px; color:#111; background:#a7f3d0; border-radius:999px; padding:4px 10px; font-weight:800;
     }
-
     .card{
-      background: var(--panel-bg);
-      border:1px solid var(--panel-br);
-      border-radius:14px; padding:10px;
-      box-shadow:0 10px 40px rgba(0,0,0,.30);
-      backdrop-filter: blur(8px);
-      -webkit-backdrop-filter: blur(8px);
+      background:linear-gradient(180deg, rgba(255,255,255,0.03), rgba(255,255,255,0.01)), var(--card);
+      border:1px solid rgba(255,255,255,.08);
+      border-radius:16px; padding:16px; box-shadow:0 10px 40px rgba(0,0,0,.35);
     }
-
-    .grid{display:grid; grid-template-columns: repeat(12,1fr); gap:10px;}
+    .grid{display:grid; grid-template-columns: repeat(12,1fr); gap:14px;}
     .col-12{grid-column: span 12;}
     .col-6{grid-column: span 6;}
-    @media (max-width: 640px){.col-6{grid-column: span 12;}}
+    @media (max-width: 860px){
+      .col-6{grid-column: span 12;}
+    }
 
     .btn{
-      border:0; cursor:pointer; border-radius:10px; padding:8px 10px;
-      background: rgba(255,255,255,0.12);
-      color:#e6f1fb; font-weight:800; font-size:12px;
-      border:1px solid rgba(255,255,255,.18);
-      backdrop-filter: blur(4px);
-      transition:.18s transform ease, .18s box-shadow ease, .18s background ease;
+      appearance:none; border:0; cursor:pointer; border-radius:12px; padding:12px 14px;
+      background: linear-gradient(180deg, #1f2937, #111827);
+      color:#e6f1fb; font-weight:800; letter-spacing:.25px;
+      border:1px solid rgba(255,255,255,.08);
+      transition:.18s transform ease, .18s box-shadow ease;
     }
     .btn.primary{
       background:linear-gradient(90deg, var(--primary), #06b6d4);
-      color:#001015;
+      color:#001015; border-color:transparent;
+      box-shadow: 0 0 0 0 var(--ring);
     }
-    .btn.small{padding:6px 8px; font-size:11px}
     .btn:hover{transform:translateY(-1px)}
     .btn:active{transform:translateY(0)}
+    .btn.small{padding:8px 10px; border-radius:10px; font-size:12px}
 
-    .row{display:flex; gap:8px; align-items:center; flex-wrap:wrap}
+    .row{display:flex; gap:10px; align-items:center; flex-wrap:wrap}
     .muted{color:var(--muted)}
     .mono{font-family: ui-monospace, SFMono-Regular, Menlo, Consolas, monospace}
-    .pill{padding:3px 7px; border-radius:999px; font-size:11px; font-weight:800}
-    .pill.ok{background:rgba(16,185,129,.25); color:#c8ffe6}
-    .pill.warn{background:rgba(245,158,11,.25); color:#fff0c7}
-    .pill.bad{background:rgba(239,68,68,.25); color:#ffd9d9}
+    .pill{padding:4px 8px; border-radius:999px; font-size:12px; font-weight:800; letter-spacing:.25px}
+    .pill.ok{background:rgba(16,185,129,.18); color:#c8ffe6; border:1px solid rgba(16,185,129,.35)}
+    .pill.warn{background:rgba(245,158,11,.18); color:#fff0c7; border:1px solid rgba(245,158,11,.4)}
+    .pill.bad{background:rgba(239,68,68,.18); color:#ffd9d9; border:1px solid rgba(239,68,68,.35)}
 
     .kpi{
-      display:flex; flex-direction:column; gap:3px; padding:10px; border-radius:10px;
-      background: var(--tile-bg);
-      border:1px solid var(--tile-br);
-      backdrop-filter: blur(4px);
+      display:flex; flex-direction:column; gap:4px; padding:14px; border-radius:12px;
+      background:rgba(255,255,255,.02); border:1px dashed rgba(255,255,255,.08);
     }
-    .kpi .label{font-size:11px; color:var(--muted)}
-    .kpi .val{
-      font-size:18px; font-weight:900; line-height:1.1;
-      transition: color .15s ease, text-shadow .15s ease;
-      color:#eaf2fb;
-    }
-    .kpi .val.nonzero{
-      color:#ff3b3b;             /* Non-zero KPI turns red */
-      text-shadow: 0 1px 10px rgba(255, 59, 59, .25);
-    }
+    .kpi .label{font-size:12px; color:var(--muted)}
+    .kpi .val{font-size:22px; font-weight:900}
 
-    .hr{height:1px; background: linear-gradient(90deg, transparent, rgba(255,255,255,.28), transparent); margin:10px 0}
+    .hr{height:1px; background: linear-gradient(90deg, transparent, rgba(255,255,255,.12), transparent); margin:14px 0}
+
     .notice{
-      font-size:11px; color:#d1e4ff;
-      background:rgba(34,211,238,.12);
-      border:1px solid rgba(34,211,238,.25);
-      padding:8px 10px; border-radius:8px;
+      font-size:12px; color:#a3b4c8; background:rgba(34,211,238,.08);
+      border:1px solid rgba(34,211,238,.25); padding:10px 12px; border-radius:10px;
       word-break: break-word;
     }
-    footer{margin-top:16px; text-align:center; color:#c4ced9; font-size:11px}
+    footer{margin-top:28px; text-align:center; color:#93a2b1; font-size:12px}
   </style>
 </head>
 <body>
-  <div id="wrap" class="wrap">
+  <div class="wrap">
     <header>
       <div class="brand">
         <img src="assets/coin.png" alt="SQ8">
         <div>
           <h1>SAAD $SQ8 Dashboard</h1>
-          <div class="sub">Track your purchased, claimed &amp; claimable tokens</div>
+          <div class="muted" style="font-size:12px; color:#ff3434;">Track your purchased, claimed & claimable tokens</div>
         </div>
       </div>
       <div class="row">
@@ -147,11 +120,11 @@
     </header>
 
     <div class="grid">
-      <div class="col-12 card">
+      <div class="col-12 card" style="max-width:760px; margin:0 auto; background:rgba(0,0,0,0.45); border-color:rgba(255,255,255,0.12);">
         <div class="row" style="justify-content:space-between; align-items:flex-start;">
           <div>
-            <div class="muted" style="font-size:11px;">Connected</div>
-            <div id="addr" class="mono" style="font-size:13px">—</div>
+            <div class="muted" style="font-size:12px;">Connected</div>
+            <div id="addr" class="mono" style="font-size:14px">—</div>
           </div>
           <div class="row">
             <span id="statusBadge" class="pill warn">Not Connected</span>
@@ -163,25 +136,25 @@
 
         <div class="grid">
           <div class="col-6">
-            <div class="kpi">
+            <div class="kpi" style="background:rgba(255,255,255,.04);">
               <div class="label">Total Purchased (locked + claimed)</div>
               <div id="kpiTotal" class="val">0 SQ8</div>
             </div>
           </div>
           <div class="col-6">
-            <div class="kpi">
+            <div class="kpi" style="background:rgba(255,255,255,.04);">
               <div class="label">Unlocked</div>
               <div id="kpiUnlocked" class="val">0 SQ8</div>
             </div>
           </div>
           <div class="col-6">
-            <div class="kpi">
+            <div class="kpi" style="background:rgba(255,255,255,.04);">
               <div class="label">Claimed</div>
               <div id="kpiClaimed" class="val">0 SQ8</div>
             </div>
           </div>
           <div class="col-6">
-            <div class="kpi">
+            <div class="kpi" style="background:rgba(255,255,255,.04);">
               <div class="label">Claimable Now</div>
               <div id="kpiClaimable" class="val">0 SQ8</div>
             </div>
@@ -190,22 +163,22 @@
 
         <div class="hr"></div>
 
-        <div class="row" style="gap:10px; align-items:flex-end;">
+        <div class="row" style="gap:16px; align-items:flex-end;">
           <div>
-            <div class="muted" style="font-size:11px;">Cliff (min)</div>
-            <div id="kpiCliff" class="mono" style="font-size:13px">—</div>
+            <div class="muted" style="font-size:12px;">Cliff (min)</div>
+            <div id="kpiCliff" class="mono">—</div>
           </div>
           <div>
-            <div class="muted" style="font-size:11px;">Duration (min)</div>
-            <div id="kpiDuration" class="mono" style="font-size:13px">—</div>
+            <div class="muted" style="font-size:12px;">Duration (min)</div>
+            <div id="kpiDuration" class="mono">—</div>
           </div>
           <div>
-            <div class="muted" style="font-size:11px;">Claim start (UTC)</div>
-            <div id="kpiStart" class="mono" style="font-size:13px">—</div>
+            <div class="muted" style="font-size:12px;">Claim start (UTC)</div>
+            <div id="kpiStart" class="mono">—</div>
           </div>
         </div>
 
-        <div id="note" class="notice" style="margin-top:10px; display:none;"></div>
+        <div id="note" class="notice" style="margin-top:14px; display:none;"></div>
       </div>
     </div>
 
@@ -213,45 +186,61 @@
   </div>
 
   <script>
-    // ====== BACKGROUND IMAGE LOADER ======
+    // ====== DYNAMIC BACKGROUND FROM ?file= OR ?bg= ======
     (function applyDynamicBackground(){
       const params = new URLSearchParams(location.search);
       const titleParam = params.get('title');
-      if (titleParam) document.title = `${titleParam} — SAAD $SQ8 Dashboard`;
+      if (titleParam) {
+        document.title = `${titleParam} — SAAD $SQ8 Dashboard`;
+      }
 
-      // default to assets/dashboard.png if not provided
-      let fileParam = params.get('file') || params.get('bg') || "assets/dashboard.png";
+      const fileParam = params.get('file') || params.get('bg');
+      if (!fileParam) return;
 
-      // If just a filename like "dashboard.png" was passed, keep it inside /assets
-      if (!/^assets\//i.test(fileParam)) {
-        fileParam = 'assets/' + fileParam.replace(/^\/+/, '');
+      let path = fileParam.trim();
+      if (!/^assets\//i.test(path)) {
+        path = 'assets/' + path.replace(/^\/+/, '');
       }
 
       const img = new Image();
       img.onload = () => {
-        document.body.style.background = `url("${fileParam}") center / cover no-repeat fixed`;
+        document.body.style.background =
+          `url("${path}") center / cover no-repeat fixed,` +
+          `radial-gradient(1200px 600px at 10% -20%, #14202e 0%, transparent 60%),` +
+          `radial-gradient(1200px 600px at 110% 120%, #211937 0%, transparent 60%),` +
+          `var(--bg)`;
+        document.body.style.backgroundAttachment = 'fixed, fixed, fixed, fixed';
+        document.body.style.backgroundRepeat = 'no-repeat, no-repeat, no-repeat, no-repeat';
+        document.body.style.backgroundPosition = 'center, center, center, center';
+        document.body.style.backgroundSize = 'cover, cover, cover, auto';
       };
       img.onerror = () => {
         const note = document.getElementById('note');
         if (note) {
           note.style.display = 'block';
-          note.textContent = `Background image not found: ${fileParam}`;
+          note.textContent = `Background image not found: ${path}`;
         }
       };
-      img.src = fileParam;
-
-      // Compact mode: add ?compact=1 to shrink the panel further
-      if (params.get('compact') === '1') {
-        document.getElementById('wrap')?.classList.add('compact');
-      }
+      img.src = path;
     })();
+
+    // ====== ENSURE ETHERS IS AVAILABLE ======
+    const ethers = window.ethers;
+    if (!ethers) {
+      const note = document.getElementById('note');
+      if (note) {
+        note.style.display = 'block';
+        note.textContent = 'Failed to load Ethers.js. Please check your internet connection and try again.';
+      }
+      throw new Error('Ethers not loaded');
+    }
 
     // ====== CONFIG ======
     const CHAIN_ID_HEX = "0x2105"; // Base mainnet 8453
     const RPC_URL = "https://mainnet.base.org";
     const PRESALE_ADDRESS = "0x00ab2677723295F2d0A79cb68E1893f9707B409D";
 
-    // Minimal ABI to fetch vesting info
+    // Minimal ABI for vestingInfo (matches your dApp)
     const PRESALE_ABI = [
       "function owner() view returns (address)",
       "function vestingInfo(address) view returns (uint256 total, uint256 alreadyClaimed, uint256 unlocked, uint256 claimable, uint256 _claimStart, uint256 _cliff, uint256 _duration)"
@@ -278,19 +267,14 @@
       $status.className = "pill " + (kind || "ok");
     }
 
-    function setKPI($el, wei){
-      const num = Number(wei);
-      $el.textContent = fmt18(wei) + " SQ8";
-      if (num > 0) $el.classList.add("nonzero"); else $el.classList.remove("nonzero");
-    }
-
     async function ensureBase(){
       if (!window.ethereum) throw new Error("No injected wallet.");
       const provider = new ethers.BrowserProvider(window.ethereum);
       const net = await provider.getNetwork();
       if (Number(net.chainId) === 8453) return provider;
+
       try {
-        await window.ethereum.request({ method:"wallet_switchEthereumChain", params:[{ chainId: CHAIN_ID_HEX }]} );
+        await window.ethereum.request({ method:"wallet_switchEthereumChain", params:[{ chainId: CHAIN_ID_HEX }]});
       } catch (e){
         if (e && e.code === 4902){
           await window.ethereum.request({
@@ -303,7 +287,9 @@
               blockExplorerUrls:["https://basescan.org"]
             }]
           });
-        } else { throw e; }
+        } else {
+          throw e;
+        }
       }
       return new ethers.BrowserProvider(window.ethereum);
     }
@@ -334,10 +320,10 @@
         const contract = new ethers.Contract(PRESALE_ADDRESS, PRESALE_ABI, provider);
         const v = await contract.vestingInfo(addr);
 
-        setKPI($kTotal,     v.total);
-        setKPI($kUnlocked,  v.unlocked);
-        setKPI($kClaimed,   v.alreadyClaimed);
-        setKPI($kClaimable, v.claimable);
+        $kTotal.textContent     = fmt18(v.total) + " SQ8";
+        $kClaimed.textContent   = fmt18(v.alreadyClaimed) + " SQ8";
+        $kUnlocked.textContent  = fmt18(v.unlocked) + " SQ8";
+        $kClaimable.textContent = fmt18(v.claimable) + " SQ8";
 
         const start = Number(v._claimStart||0);
         const cliff = Number(v._cliff||0);
@@ -355,10 +341,11 @@
       }
     }
 
+    // Wire up buttons
     $btnConnect.addEventListener("click", connect);
     $btnRefresh.addEventListener("click", () => connect());
 
-    // Optional: auto-connect if authorized
+    // Try auto-connect if already authorized
     (async () => {
       if (window.ethereum){
         try{
