--- a/dashboard.html
+++ b/dashboard.html
@@ -27,16 +27,16 @@
     }
     *{box-sizing:border-box}
     html,body{height:100%}
-    body {
-  margin:0;
-  font-family: ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Arial, "Apple Color Emoji","Segoe UI Emoji";
-  color:#ffffff; /* make font white */
-  background: url("assets/dashboard.png") center/cover no-repeat fixed;
-}
+    body{
+      margin:0;
+      font-family: ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Arial, "Apple Color Emoji","Segoe UI Emoji";
+      color:#ffffff; /* default white text */
+      background: url("assets/dashboard.png") center/cover no-repeat fixed;
+    }
 
     /* Smaller, elegant “card” container so background art stays visible */
     .wrap{
-      max-width: 540px;   /* smaller than before to expose more background */
+      max-width: 540px;   /* small to show more background */
       margin: 0 auto;
       padding: 24px 14px 48px;
     }
@@ -94,36 +94,27 @@
     .pill.warn{background:rgba(245,158,11,.18); color:#fff0c7; border:1px solid rgba(245,158,11,.4)}
     .pill.bad{background:rgba(239,68,68,.18); color:#ffd9d9; border:1px solid rgba(239,68,68,.35)}
 
-   /* KPI cards: darker translucent */
-.kpi {
-  display:flex;
-  flex-direction:column;
-  gap:4px;
-  padding:14px;
-  border-radius:12px;
-  background:rgba(0,0,0,0.55); /* darker than before */
-  border:1px dashed rgba(255,255,255,.15);
-}
-.kpi .label {
-  font-size:12px;
-  color:#f0f0f0; /* white-ish labels */
-}
-.kpi .val {
-  font-size:18px;
-  font-weight:900;
-  color:#ffffff; /* ensure values are white */
-}
+    /* KPI cards: darker translucent */
+    .kpi{
+      display:flex; flex-direction:column; gap:4px; padding:14px; border-radius:12px;
+      background:rgba(0,0,0,0.55); /* darker */
+      border:1px dashed rgba(255,255,255,.15);
+    }
+    .kpi .label{font-size:12px; color:#ffffff;}
+    .kpi .val{font-size:18px; font-weight:900; color:#ffffff;}
 
     .hr{height:1px; background: linear-gradient(90deg, transparent, rgba(255,255,255,.18), transparent); margin:12px 0}
 
     .notice{
-      font-size:12px; color:#a3b4c8; background:rgba(34,211,238,.08);
+      font-size:12px; color:#e6eef8; background:rgba(34,211,238,.08);
       border:1px solid rgba(34,211,238,.25); padding:10px 12px; border-radius:10px;
-      word-break: break-word;
-      display:none;
+      word-break: break-word; display:none;
     }
 
-    footer{margin-top:24px; text-align:center; color:#93a2b1; font-size:12px}
+    footer{margin-top:24px; text-align:center; color:#e8eef5; font-size:12px}
+
+    /* >>> Make Cliff/Duration/Start white (override muted/mono) <<< */
+    .muted, .mono { color:#ffffff !important; }
   </style>
 </head>
 <body>
@@ -213,7 +204,7 @@
     (function ensureEthersLoaded(){
       if (window.ethers) return;
       var s = document.createElement('script');
-      s.src = 'assets/ethers.umd.min.js';   // <-- optional local fallback
+      s.src = 'assets/ethers.umd.min.js';   // optional local fallback
       s.onload = function(){ console.log('Loaded local ethers fallback'); };
       s.onerror = function(){
         var note = document.getElementById('note');
